# qgraph-ai-service

./: .dockerignore  .env.example  .gitignore  .graphifyignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  update-graph.sh
.claude/: settings.json
.codex/: hooks.json
.github/workflows/: ci.yml  deploy.yml
docs/: backend_overview.md  deployment.md  development.md  index.md  testing.md
docs/search/: embeddings.md  golden-eval-set.md  hybrid-retrieval.md  indexing.md  result-blocks.md
src/: config.py  main.py
src/api/: search.py  segmentation.py
src/search/: __init__.py  contracts.py  fusion.py  opensearch_client.py  pipeline.py  response_builder.py
src/services/: corpus_client.py  opensearch_lexical.py  planning.py  search_documents.py  search_jobs.py  search_normalization.py  search_service.py  segmentation_artifacts.py
tests/: conftest.py  test_settings_hermetic.py
tests/api/: test_search_execute.py  test_search_jobs.py  test_search_plan.py  test_search_readiness.py  test_segmentation_artifacts.py
tests/search/: test_builder.py  test_cli.py  test_contracts.py  test_documents.py  test_embedding_contracts.py  test_embedding_factory.py  test_embedding_input.py  test_eval_set.py  test_fusion.py  test_lexical_retriever.py  test_mapping.py  test_normalization.py  test_openai_provider.py  test_opensearch_client.py  test_pipeline.py  test_qdrant_mapping.py  test_qdrant_store.py  test_response_builder.py  test_search_filters.py  test_semantic_builder.py  test_semantic_cli.py  (+6 more)
(+41 files in other folders)
